[gd_scene load_steps=5 format=3 uid="uid://qdan8ptnx02h"]

[ext_resource type="Texture2D" uid="uid://b1coouvkpfphe" path="res://src/main/resource/Sprites/Logo.png" id="1_86o0p"]
[ext_resource type="Script" path="res://src/main/scene/UI/StartScreen.gd" id="1_wxetn"]
[ext_resource type="LabelSettings" uid="uid://6lhxwbwmxxtp" path="res://src/main/resource/score_label_settings.tres" id="2_wwrvr"]
[ext_resource type="Script" path="res://src/main/scene/UI/FadingLabel.gd" id="3_gsl7l"]

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_wxetn")

[node name="PanelContainer" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -220.5
offset_right = 512.0
offset_bottom = 220.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_86o0p")

[node name="PressStartLabel" type="Label" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -118.0
grow_horizontal = 2
grow_vertical = 0
text = "- PRESS START -"
label_settings = ExtResource("2_wwrvr")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_gsl7l")

[node name="ReadyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="ReadyTimer" to="." method="_on_ready_timer_timeout"]
